# mafia-camera-mod

./: .gitignore  .gitmodules  CMakeLists.txt  CameraMod.sln  README.md  compileit.bat  dumpScriptCommands.txt  enemyScriptCommandIds.txt  hook-game.bat  msvc.bat  run-game.bat  scriptCommandOpcodes.txt
Angelo/: CMakeLists.txt
Angelo/src/: dllmain.cpp
AngeloFramework/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  README.md
AngeloFramework/src/angeloframework/: angelo.cpp  angelo.hpp
AngeloFramework/src/angeloframework/core/: CRawInput.cpp  direct8hookdevice.hpp  manager.cpp  manager.hpp  utils.cpp  utils.hpp
AngeloFramework/src/angeloframework/core/imgui/: CImGUIAdaptor.cpp  CImGUIAdaptor.hpp
AngeloFramework/src/angeloframework/game/: CGame.cpp  CGame.h  cmission.hpp  cprogram.hpp  internals.hpp  offsets.hpp  utils.hpp
AngeloFramework/src/angeloframework/imgui/: CImGUIAdaptor.cpp
AngeloFramework/src/angeloframework/internal/: CD3D9Accessor.h  CGraphics.h  CHooks.cpp  CRawInput.h
AngeloFramework/src/angeloframework/utils/: IDirect3DDevice8Proxy.h  game_hooks.hpp  helpers.cpp  helpers.hpp  memory.cpp  memory.hpp  tool.cpp  tools.h
CameraMod/: CCameraPlayer.hpp  CCore.cpp  CCore.h  CCoreController.hpp  CD3D9Accessor.cpp  CD3D9Accessor.h  CDirect3DDevice8Proxy.h  CFreecamera.cpp  CFreecamera.hpp  CGUI.cpp  CGUI.h  CGUIButton.cpp  CGUIButton.h  CGUICheckbox.cpp  CGUICheckbox.h  CGUIEditbox.cpp  CGUIEditbox.h  CGUIElement.cpp  CGUIElement.h  CGUIElementsPool.cpp  CGUIElementsPool.h  CGUIGroup.cpp  CGUIGroup.h  CGUILabel.cpp  CGUILabel.h  CGUIScrollbox.cpp  CGUIScrollbox.h  CGUITable.h  CGUITableList.cpp  CGUITableList.h  CGUIWindow.cpp  CGUIWindow.h  CGame.cpp  CGame.h  CGenericMode.hpp  CGraphics.cpp  CGraphics.h  CHooks.cpp  CHooks.h  CImGUIAdaptor.cpp  (+30 more)
CameraMod/Debug/: vc120.idb
CameraMod/Release/: camera.res
CameraMod/camera/: camera.rc  resource.h
CameraMod/common/: imgui_utils.hpp  structures.h
CameraMod/game/: CDirect3DDevice8Proxy.h  CGame.cpp  CGame.h  CGenericGame.hpp  CGraphics.cpp  CGraphics.h  CImGUIAdaptor.cpp  CImGUIAdaptor.hpp  CRawInput.cpp  CRawInput.h  CScript.cpp  CScript.h  MafiaAddresses.txt
CameraMod/games/: CMakeLists.txt  README.md
CameraMod/games/mafia/: CD3D9Accessor.cpp  CMakeLists.txt  main.cpp
CameraMod/gui/: CGUI.cpp  CGUIButton.cpp  CGUICheckbox.cpp  CGUIEditbox.cpp  CGUIEditbox.h  CGUIElement.cpp  CGUIElement.h  CGUIElementsPool.cpp  CGUIElementsPool.h  CGUIGroup.cpp  CGUIGroup.h  CGUILabel.cpp  CGUIScrollbox.cpp  CGUITable.h  CGUITableList.cpp  CGUITableList.h  CGUIWindow.cpp
CameraMod/modes/: CAbout.cpp  CAbout.hpp  CFreecamera.cpp  CFreecamera.hpp  CGenericMode.hpp  CModeController.hpp  CModeManager.cpp  CModeManager.hpp  CRecorderMode.hpp  CSandbox.hpp  CTimelineManager.hpp
CameraMod/modes/sandbox/: CScriptInspector.cpp  CScriptInspector.hpp
CameraMod/sdk/: CAPI.hpp  CGenericGame.hpp  CGenericGraphics.hpp  CGenericInput.hpp  README.md
CameraModInjector/: CMakeLists.txt  CameraModInjector.vcxproj  Main.cpp
HotLoader/: CMakeLists.txt  dllmain.cpp
Injector/: CMakeLists.txt  config.hpp  console.hpp  injecting_api.cpp  injecting_api.hpp  main.cpp
Release/: FPS.txt  FastFont.cpp  FastFont.dsp  FastFont.dsw  FastFont2.cpp  FastFont2.dsp  author.txt  dhFastFont.h
vendors/: CMakeLists.txt
vendors/cd3dfont/: d3dfont.cpp  d3dutil.cpp  dxutil.cpp
vendors/d3d8to9/source/: .d3d8to9.hpp.swp
