add_library(CameraModGameWrapper SHARED 
    CD3D9Accessor.cpp
    CD3D9Accessor.h
    CDirect3DDevice8Proxy.h
    CGame.cpp
    CGame.h
    CGraphics.cpp
    CGraphics.h
    CHooks.cpp
    CHooks.h
    CImGUIAdaptor.cpp
    CImGUIAdaptor.hpp
    CMakeLists.txt
    CRawInput.cpp
    CRawInput.h
    imgui_impl_dx9.cpp
    imgui_impl_dx9.h
    main.cpp
)

